--- a/src/pages/cart-page.html
+++ b/src/pages/cart-page.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="/src/js/user-info.js" type="text/javascript"></script>
-    <script defer src="/src/js/index.js"></script>
+    <script src="../js/user-info.js" type="text/javascript"></script>
+    <script defer src="../js/index.js"></script>
     <title>Owl's Shoes</title>
   </head>
 <body>
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="/src/pages/main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
-            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="/src/img/search.svg" alt=""></button>
-            <a href="/src/pages/mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="/src/pages/main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
+            <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
           </div>
         </div>
     </nav>
@@ -40,7 +40,7 @@
       <tbody class="wish-list-table-body">
       <tr>
         <th scope="col" class="list-box-item check-item" ><input type="checkbox" class="check"></th>
-        <th scope="col" class="list-box-item cart-item-image"><img src="/src/img/shoes.svg"></th>
+        <th scope="col" class="list-box-item cart-item-image"><img src="../img/shoes.svg"></th>
         <th scope="col" class="list-box-item cart-item-name">에어조던</th>
         <th scope="col" class="list-box-item cart-item-price">1000만원</th>
         <th scope="col" class="list-box-item"><div class="item-quantity-counter">
@@ -52,7 +52,7 @@
       </tr>
       <tr>
       <th scope="col" class="list-box-item check-item"><input type="checkbox" class="check"></th>
-      <th scope="col" class="list-box-item cart-item-image"><img src="/src/img/shoes.svg"></th>
+      <th scope="col" class="list-box-item cart-item-image"><img src="../img/shoes.svg"></th>
         <th scope="col" class="list-box-item cart-item-name">에어조던</th>
         <th scope="col" class="list-box-item" cart-item-price>1000만원</th>
         <th scope="col" class="list-box-item"><div class="item-quantity-counter">
@@ -65,7 +65,7 @@
       </tr>
         <tr>
         <th scope="col" class="list-box-item check-item"><input type="checkbox" class="check"></th>
-        <th scope="col" class="list-box-item cart-item-image"><img src="/src/img/shoes.svg"></th>
+        <th scope="col" class="list-box-item cart-item-image"><img src="../img/shoes.svg"></th>
         <th scope="col" class="list-box-item cart-item-name">에어조던프리미엄대박델타</th>
         <th scope="col" class="list-box-item cart-item-price">1000만원</th>
         <th scope="col" class="list-box-item"><div class="item-quantity-counter">
@@ -87,7 +87,7 @@
     <div class="total-price">총계 : 3360만원</div>
   </section>
   <section class="pay-cart-btn">
-    <a href="/src/pages/pay.html"><button class="btn pay-btn">결제하기</button></a>
+    <a href="pay.html"><button class="btn pay-btn">결제하기</button></a>
   </section>
 
   <footer class="pay-footer">
