--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/src/styles/index.css">
+  <link rel="stylesheet" href="../styles/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="/src/js/user-info.js" type="text/javascript"></script>
-  <script defer src="/src/js/index.js"></script>
+  <script src="../js/user-info.js" type="text/javascript"></script>
+  <script defer src="../js/index.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body  class="main-page">
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="/src/pages/main-page-login.html" class="btn">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
-            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="/src/img/search.svg" alt=""></button>
-            <a href="/src/pages/mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="/src/pages/main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
+            <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
           </div>
         </div>
     </nav>
@@ -32,7 +32,7 @@
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
           <input type="text" id="search-input">
-          <a href="/src/pages/category-page-login.html"><img src="/src/img/search.svg" alt=""></a>
+          <a href="category-page-login.html"><img src="../img/search.svg" alt=""></a>
         </div>
       </div>
     </section>
