--- a/src/pages/paid.html
+++ b/src/pages/paid.html
@@ -3,54 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/src/styles/index.css">
+  <link rel="stylesheet" href="../styles/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="/src/js/user-info.js" type="text/javascript"></script>
-  <script defer src="/src/js/index.js"></script>
+  <script src="../js/user-info.js" type="text/javascript"></script>
+  <script defer src="../js/index.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body>
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="/src/pages/main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
-            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="/src/img/search.svg" alt=""></button>
-            <a href="/src/pages/mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="/src/pages/main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
+            <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
           </div>
         </div>
     </nav>
   </header>
   <main>
     <section class="bought-items">
-      <div class="bought-item-image"><img src="/src/img/shoes.svg" alt=""></div>
+      <div class="bought-item-image"><img src="../img/shoes.svg" alt=""></div>
       <ul class="bought-item">
         <li class="bought-item-name"> 에어조던</li>
         <li class="bought-item-quantity">2개</li>
         <li class="bought-item-ship-date">내일 도착 보장~!</li>
-        <li><a href="/src/pages/item-page-login.html"><button class="bought-item-info">제품 정보</button></a></li>
+        <li><a href="item-page-login.html"><button class="bought-item-info">제품 정보</button></a></li>
       </ul>
     </section>
     <section class="bought-items">
-      <div class="bought-item-image"><img src="/src/img/shoes.svg" alt=""></div>
+      <div class="bought-item-image"><img src="../img/shoes.svg" alt=""></div>
       <ul class="bought-item">
         <li class="bought-item-name"> 에어조던</li>
         <li class="bought-item-quantity">2개</li>
         <li class="bought-item-ship-date">내일 도착 보장~!</li>
-        <li><a href="/src/pages/item-page-login.html"><button class="bought-item-info">제품 정보</button></a></li>
+        <li><a href="item-page-login.html"><button class="bought-item-info">제품 정보</button></a></li>
       </ul>
     </section>
     <section class="bought-items">
-      <div class="bought-item-image"><img src="/src/img/shoes.svg" alt=""></div>
+      <div class="bought-item-image"><img src="../img/shoes.svg" alt=""></div>
       <ul class="bought-item">
         <li class="bought-item-name"> 에어조던</li>
         <li class="bought-item-quantity">2개</li>
         <li class="bought-item-ship-date">내일 도착 보장~!</li>
-        <li><a href="/src/pages/item-page-login.html"><button class="bought-item-info">제품 정보</button></a></li>
+        <li><a href="item-page-login.html"><button class="bought-item-info">제품 정보</button></a></li>
       </ul>
     </section>
 
@@ -58,9 +58,9 @@
       1120만원 결제완료!
     </section>
     <section class="go-to-site">
-    <a href="/src/pages/main-page-login.html"><button class=" btn go-to-main">
+    <a href="main-page-login.html"><button class=" btn go-to-main">
       Main으로 돌아가기</button></a>
-    <a href="/src/pages/category-page-login.html"><button class=" btn go-to-category">
+    <a href="category-page-login.html"><button class=" btn go-to-category">
       계속 쇼핑하기</button></a> 
     </section>
   </main>
