--- a/src/pages/pay.html
+++ b/src/pages/pay.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/src/styles/index.css">
+  <link rel="stylesheet" href="../styles/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="/src/js/user-info.js" type="text/javascript"></script>
-  <script defer src="/src/js/index.js"></script>
+  <script src="../js/user-info.js" type="text/javascript"></script>
+  <script defer src="../js/index.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body>
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="/src/pages/main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
-            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="/src/img/search.svg" alt=""></button>
-            <a href="/src/pages/mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="/src/pages/main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
+            <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
           </div>
         </div>
     </nav>
@@ -37,21 +37,21 @@
     </section>
     <section class="ship-confirmed-info">
       <div class="ship-confirmed-box">
-        <img src="/src/img/mail.jpeg" alt="">
+        <img src="../img/mail.jpeg" alt="">
       </div>
     </section>
     <section class="pay-method"> 
       <p>결제방법</p>
       <div class="pay-box">
-        <div class="pay-img-contain"><input type="radio" id="credit-card" name="pay-method"> <label for="credit-card"><img src="/src/img/credit-card.png" alt=""></label></div>
-        <div class="pay-img-cover"><input type="radio" id="payco" name="pay-method"><label for="payco"> <img src="/src/img/payco.png" alt=""></label></div>
-        <div class="pay-img-contain"><input type="radio" id="kakao" name="pay-method"> <label for="kakao"><img src="/src/img/kakao.png" alt="" style="background-color:yellow"></label></div>
-        <div class="pay-img-contain"><input type="radio" id="naver" name="pay-method"><label for="naver"><img src="/src/img/naver.png" alt="" style="background-color: green;"></label></div>
-        <div class="pay-img-cover"><input type="radio" id="toss" name="pay-method"><label for="toss"><img src="/src/img/toss.png" alt=""></label></div>
+        <div class="pay-img-contain"><input type="radio" id="credit-card" name="pay-method"> <label for="credit-card"><img src="../img/credit-card.png" alt=""></label></div>
+        <div class="pay-img-cover"><input type="radio" id="payco" name="pay-method"><label for="payco"> <img src="../img/payco.png" alt=""></label></div>
+        <div class="pay-img-contain"><input type="radio" id="kakao" name="pay-method"> <label for="kakao"><img src="../img/kakao.png" alt="" style="background-color:yellow"></label></div>
+        <div class="pay-img-contain"><input type="radio" id="naver" name="pay-method"><label for="naver"><img src="../img/naver.png" alt="" style="background-color: green;"></label></div>
+        <div class="pay-img-cover"><input type="radio" id="toss" name="pay-method"><label for="toss"><img src="../img/toss.png" alt=""></label></div>
       </div>
     </section>
     <section class="pay">
-      <a href="/src/pages/paid.html"><button class="btn pay-btn">결제하기</button></a>
+      <a href="paid.html"><button class="btn pay-btn">결제하기</button></a>
     </section>
   </main>
 
@@ -66,6 +66,6 @@
       </ul>
     </div>
   </footer>
-  <script src="/src/js/index.js"></script>
+  <script src="../js/index.js"></script>
 </body>
 </html>
