--- a/src/pages/item-page-login.html
+++ b/src/pages/item-page-login.html
@@ -9,92 +9,33 @@
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="../js/user-info.js" type="text/javascript"></script>
+  <script src="../js/data.js" type="text/javascript"></script>
   <script defer src="../js/item-page.js"></script>
   <script defer src="../js/login.js"></script>
   <script defer src="../js/popup.js"></script>
-  <script defer src="../js/data.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body>
-  <header>
-    <nav class="nav-bar">
-        <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn">부엉이 신발장</a></div>
-          <div class="nav-bar-menu">
-            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
-            <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
-          </div>
-        </div>
-    </nav>
-  </header>
-  <section class="item-top-container">
-    <!-- 상단 좌측 -->
-    <div class="item-container">
-      <div class="item-summary">
-        <ul>
-        <li class="item-name">Owl AirFly</li>
-        <li class="item-price">10만 깃털</li>
-        <li class="item-color"></li>
-        </ul>   
+  <section class="popup-background search-popup-background">
+    <div class="popup search-popup">
+      <div class="btn" onclick="SearchPopupClose()">X</div>
+      <div class="search-box">
+        <input type="text" id="search-input">
+        <a href="category-page-login.html"><img src="../img/search.svg" alt=""></a>
       </div>
     </div>
-    <!-- 상단 우측 -->
-    <div class="item-order-container">
-      <p style="font-weight: bold;">사이즈 옵션</p>
-      <div class="size-option">
-        <button class="size-option-btn" onclick="selectSize(245)">245</button>
-        <button class="size-option-btn" onclick="selectSize(250)">250</button>
-        <button class="size-option-btn" onclick="selectSize(255)">255</button>
-        <button class="size-option-btn" onclick="selectSize(260)">260</button>
-        <button class="size-option-btn" onclick="selectSize(265)">265</button>
-        <button class="size-option-btn" onclick="selectSize(270)">270</button>
-        <button class="size-option-btn" onclick="selectSize(275)">275</button>
-        <button class="size-option-btn" onclick="selectSize(280)">280</button>
-        <button class="size-option-btn" onclick="selectSize(295)">295</button>
-      </div>
-      <br/>
-      <div class="color-option">
-        <p style="font-weight: bold;">컬러 옵션</p>
-        <input type="color" id="selectedColor">
-      </div>
-      <div class="chosen-option">
-        <p style="font-weight: bold;">선택된 옵션</p>
-        <span id="selectedSize">Size : </span>
-        <div class="selectedcolor-box">
-          <p>색상 : <div id="changedColor"></div></p>
-        </div>
-      </div>
-      <div class="decision">
-        <div class="like">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi" viewBox="0 0 16 16" id="heart">
-            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-          </svg>
-        </div>
-        <div class="wishlist"><a href="./cart-page.html"><img src="../img/shopping cart.png" alt="장바구니"></a></div>
-      </div>
   </section>
-  <main class="item-bottom-container">
-    <section class="popup-background search-popup-background">
-      <div class="popup search-popup">
-        <div class="btn" onclick="SearchPopupClose()">X</div>
-        <div class="search-box">
-          <input type="text" id="search-input">
-          <a href="category-page-logout.html"><img src="../img/search.svg" alt=""></a>
+  <header>
+    <nav class="nav-bar">
+      <div class="nav-bar-items">
+        <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn">부엉이 신발장</a></div>
+        <div class="nav-bar-menu">
+          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
+          <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
+          <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
         </div>
       </div>
-    </section>
-    <header>
-      <button class="more-info-select selected">상세정보</button>
-      <button class="review-select">리뷰</button>
-    </header>
-    <section class="item-details">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident iusto quae ratione, maiores fuga doloremque quidem hic eligendi consequuntur dicta atque temporibus fugiat saepe nemo porro dolorum nihil blanditiis voluptas at reprehenderit. Explicabo ullam odio at necessitatibus ipsum ab, temporibus eveniet nostrum quaerat quisquam architecto, illum sapiente eligendi deleniti ut molestiae eum. Voluptate, laborum provident voluptatum odio esse aliquid quae delectus laboriosam ab harum magni placeat dolores modi adipisci voluptates vel porro eaque eius veritatis! Voluptate consectetur eligendi laborum dolore quae itaque ipsa dolorum, corrupti dolores, expedita fugiat velit et porro excepturi minima veniam ut a cum eaque? Dolor illo, inventore laboriosam deserunt distinctio possimus quas nam. Cumque omnis incidunt ipsam non molestiae, exercitationem sint delectus in labore, atque veniam dolor explicabo molestias tempora maxime assumenda placeat tempore accusantium, quibusdam sit voluptates doloribus. Autem ratione, quisquam veniam perferendis veritatis sapiente itaque deleniti nihil tempora placeat possimus, minima maiores impedit voluptatum eligendi. Nemo et minus dicta nihil inventore, recusandae mollitia aliquid iste rerum corporis repudiandae dolores maxime excepturi unde fugiat culpa laudantium modi. Laboriosam sapiente doloremque adipisci necessitatibus molestias aliquid debitis eveniet quaerat quasi saepe rerum, nobis ad ex nemo illum laudantium consequatur ut dolorum id corrupti nesciunt non? Sit quos harum fugiat autem placeat minima quia iusto, cumque quam delectus, vel ipsum? Aliquam doloremque sint sed officia doloribus vero ut numquam tenetur quibusdam, nulla minus aperiam ab a fuga alias assumenda animi magnam labore consequatur nobis dolorem ipsa incidunt quidem vel. Quam facere, minus perspiciatis odit illo soluta eum quisquam ipsam deserunt nemo facilis aliquam esse cupiditate officia pariatur incidunt unde error atque? Quam necessitatibus at officia soluta corrupti est ad earum perspiciatis accusantium nihil quisquam blanditiis, harum autem molestias enim nulla suscipit dolor nisi! Libero, eligendi. Impedit, officia magnam dolor ducimus illo facere ea commodi eligendi dolores sint omnis!</p>
-    </section>
-    <section class="review">
-      <p>우왕 부엉이 짱 선물 고마워~~~</p>
-    </section>
-  </main>
-  <script src="../js/item-page.js"></script>
+    </nav>
+  </header>
 </body>
 </html>
