--- a/src/main-page-logout.html
+++ b/src/main-page-logout.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/index.css">
+  <link rel="stylesheet" href="./styles/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="../js/data.js" type="text/javascript"></script>
-  <script defer src="../js/main-page.js"></script>
-  <script defer src="../js/login.js"></script>
-  <script defer src="../js/popup.js"></script>
+  <script src="./js/data.js" type="text/javascript"></script>
+  <script defer src="./js/main-page.js"></script>
+  <script defer src="./js/login.js"></script>
+  <script defer src="./js/popup.js"></script>
   <title>Owl's Shoes</title>
 </head>
 <body  class="main-page">
@@ -20,7 +20,7 @@
       <div class="nav-bar-items">
         <div class="nav-bar-comp-name"><a href="main-page-logout.html" class="btn">부엉이 신발장</a></div>
         <div class="nav-bar-menu">
-          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
+          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
           <button class="btn nav-btn" onclick="SigninPopupOpen()"> SIGNIN </button>
           <button class="btn nav-btn" onclick="LoginPopupOpen()"> LOGIN </button>
         </div>
@@ -33,7 +33,7 @@
         <div class="btn" onclick="SearchPopupClose()">X</div>
         <div class="search-box">
           <input type="text" id="search-input">
-          <a href="category-page-logout.html"><img src="../img/search.svg" alt=""></a>
+          <a href="./pages/category-page-logout.html"><img src="./img/search.svg" alt=""></a>
         </div>
       </div>
     </section>
@@ -120,11 +120,11 @@
         <div class="footer-text-btn-box footer-text-btn-SNS">
           <div class="footer-text-btn-info">
             <ul>
-              <li><a href="https://www.instagram.com/"><img src="../img/insta_icon_1x.svg" alt="facebook">
+              <li><a href="https://www.instagram.com/"><img src="./img/insta_icon_1x.svg" alt="facebook">
               </a></li>
-              <li><a href="https://www.facebook.com/"><img src="../img/facebook_icon_1x.svg" alt="facebook">
+              <li><a href="https://www.facebook.com/"><img src="./img/facebook_icon_1x.svg" alt="facebook">
               </a></li>
-              <li><a href="https://twitter.com/"><img src="../img/twitter_icon_1x.svg" alt="facebook">
+              <li><a href="https://twitter.com/"><img src="./img/twitter_icon_1x.svg" alt="facebook">
               </a></li>
             </ul>
           </div>
