--- a/src/pages/main-page-login.html
+++ b/src/pages/main-page-login.html
@@ -23,7 +23,7 @@
           <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="../img/search.svg" alt=""></button>
           <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
           <a href="cart-page.html" class="btn nav-btn"> CART </a>
-          <a href="main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+          <a href="../main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
         </div>
       </div>
     </nav>
