--- a/src/pages/pay.html
+++ b/src/pages/pay.html
@@ -19,7 +19,7 @@
           <div class="nav-bar-comp-name"><a href="main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
             <a href="mypage.html" class="btn nav-btn"> MYPAGE </a>
-            <a href="main-page-logout.html" class="btn nav-btn" onclick="logout()"> LOGOUT </a>
+            <a href="./main-page-logout.html" class="btn nav-btn" onclick="logout()"> LOGOUT </a>
           </div>
         </div>
     </nav>
@@ -36,7 +36,7 @@
     </section>
     <section class="ship-confirmed-info">
       <div class="ship-confirmed-box">
-        <img src="../img/mail.jpeg" alt="">
+        <img src=../img/mail.jpeg" alt="">
       </div>
     </section>
     <section class="pay-method"> 
